--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-root-toast": "^3.2.1",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.0",
+    "react-native-swiper": "^1.6.0",
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.10.2",
     "react-navigation-tabs": "^2.10.1"
